# rust_req

./: .gitignore  .gitlab-ci.yml  .tool-versions  README.md  mix.exs
.claude/: settings.local.json
.github/workflows/: release.yml
config/: config.exs
lib/: rust_req.ex
lib/rust_req/: native.ex
native/rust_req_nif/: Cargo.toml
native/rust_req_nif/.cargo/: config.toml
native/rust_req_nif/src/: lib.rs
test/: rust_req_test.exs
