[package]
name = "rust_req_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_req_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.1", default-features = false, features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
